# cmake_template

./: .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.txt
cmake/: CUDAHelper.cmake  FindFuzzylite.cmake  FindSerialport.cmake  deps.cmake
lib/: CMakeLists.txt
lib/demo_lib/: CMakeLists.txt
lib/demo_lib/cmake/: config.cmake.in
test/: CMakeLists.txt  test_link.cpp  video_extract.cpp  webcam.cpp
util/: util.cmake
util/demo_util/: CMakeLists.txt  main.cpp
util/util1/: CMakeLists.txt  main.c
util/util2/: CMakeLists.txt  main.cpp
